--- a/styles.css
+++ b/styles.css
@@ -41,34 +41,34 @@ button:hover {
 /* Floating hearts */
 .heart {
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background-color: red;
     transform: rotate(-45deg);
-    animation: floatUp 6s infinite ease-in-out;
-    opacity: 0.9;
+    animation: floatUp 8s infinite ease-in-out;
+    opacity: 0.8;
 }
 
-/* Heart shape using before and after pseudo-elements */
+/* Fixing heart shape using before and after pseudo-elements */
 .heart::before,
 .heart::after {
     content: "";
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background-color: red;
     border-radius: 50%;
 }
 
-/* Fixing heart shape placement */
+/* Properly aligning the heart shape */
 .heart::before {
-    top: -10px;
+    top: -12.5px;
     left: 0;
 }
 
 .heart::after {
+    left: 12.5px;
     top: 0;
-    left: 10px;
 }
 
 /* Floating animation */
@@ -83,19 +83,7 @@ button:hover {
     }
 }
 
-/* Generating multiple hearts */
-@keyframes generateHearts {
-    0% {
-        transform: translateY(100vh) rotate(-45deg) scale(1);
-        opacity: 1;
-    }
-    100% {
-        transform: translateY(-10vh) rotate(-45deg) scale(1);
-        opacity: 0;
-    }
-}
-
-/* Creating multiple hearts dynamically */
+/* Randomly placing and timing hearts */
 .heart:nth-child(1) { left: 10%; animation-duration: 6s; }
 .heart:nth-child(2) { left: 20%; animation-duration: 7s; }
 .heart:nth-child(3) { left: 30%; animation-duration: 8s; }
