--- a/styles.css
+++ b/styles.css
@@ -41,55 +41,54 @@ button:hover {
 /* Floating hearts */
 .heart {
     position: absolute;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     background-color: red;
     transform: rotate(-45deg);
-    animation: floatUp 8s infinite ease-in-out;
+    animation: floatUp 6s linear infinite;
     opacity: 0.8;
 }
 
-/* Fixing heart shape using before and after pseudo-elements */
+/* Fixing heart shape */
 .heart::before,
 .heart::after {
     content: "";
     position: absolute;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     background-color: red;
     border-radius: 50%;
 }
 
-/* Properly aligning the heart shape */
 .heart::before {
-    top: -12.5px;
+    top: -10px;
     left: 0;
 }
 
 .heart::after {
-    left: 12.5px;
+    left: 10px;
     top: 0;
 }
 
 /* Floating animation */
 @keyframes floatUp {
     0% {
-        transform: translateY(100vh) rotate(-45deg) scale(1);
+        transform: translateY(100vh) rotate(-45deg);
         opacity: 1;
     }
     100% {
-        transform: translateY(-10vh) rotate(-45deg) scale(1);
+        transform: translateY(-10vh) rotate(-45deg);
         opacity: 0;
     }
 }
 
-/* Randomly placing and timing hearts */
-.heart:nth-child(1) { left: 10%; animation-duration: 6s; }
-.heart:nth-child(2) { left: 20%; animation-duration: 7s; }
-.heart:nth-child(3) { left: 30%; animation-duration: 8s; }
-.heart:nth-child(4) { left: 40%; animation-duration: 6.5s; }
-.heart:nth-child(5) { left: 50%; animation-duration: 7.5s; }
-.heart:nth-child(6) { left: 60%; animation-duration: 8.5s; }
-.heart:nth-child(7) { left: 70%; animation-duration: 9s; }
-.heart:nth-child(8) { left: 80%; animation-duration: 6.8s; }
-.heart:nth-child(9) { left: 90%; animation-duration: 7.2s; }
+/* Generating more hearts */
+.heart:nth-child(1) { left: 10%; animation-duration: 4s; }
+.heart:nth-child(2) { left: 20%; animation-duration: 5s; }
+.heart:nth-child(3) { left: 30%; animation-duration: 6s; }
+.heart:nth-child(4) { left: 40%; animation-duration: 5.5s; }
+.heart:nth-child(5) { left: 50%; animation-duration: 6.5s; }
+.heart:nth-child(6) { left: 60%; animation-duration: 7s; }
+.heart:nth-child(7) { left: 70%; animation-duration: 7.5s; }
+.heart:nth-child(8) { left: 80%; animation-duration: 5.8s; }
+.heart:nth-child(9) { left: 90%; animation-duration: 6.2s; }
